03-service.yaml
kind: Service
apiVersion: v1
metadata:
  name:  myapp-svc
  namespace: proj-firuze-myapp
  labels:
    app: myapp
spec:
  selector:
    app:  myapp
  type:  ClusterIP
  ports:
  - name:  myapp-port
    port:  8080
    targetPort:  8080
